--- a/Advanced Math Calculator/MainPage.xaml
+++ b/Advanced Math Calculator/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Advanced_Math_Calculator.MainPage"
+    x:Class="Engineering_Math_Calculator.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Advanced_Math_Calculator"
@@ -39,54 +39,66 @@
 
 
 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="35"></RowDefinition>
+        </Grid.RowDefinitions>
 
-    <NavigationView x:FieldModifier="public" ItemInvoked="Hamberg_Menu_ItemInvoked"  x:Name="Hamberg_Menu" Grid.Row="1" IsPaneOpen="False" AlwaysShowHeader="False" CompactPaneLength="48" OpenPaneLength="225" Background="{ThemeResource MyAcrylicBrush}"  RequestedTheme="Dark">
+        <NavigationView x:FieldModifier="public" ItemInvoked="Hamberg_Menu_ItemInvoked"  x:Name="Hamberg_Menu" Grid.Row="0" IsPaneOpen="False" AlwaysShowHeader="False" CompactPaneLength="48" OpenPaneLength="225" Background="{ThemeResource MyAcrylicBrush}"  RequestedTheme="Dark">
 
-        <NavigationView.MenuItems>
-            <NavigationViewItem Content="555 Timer" Tag="555" >
-                <NavigationViewItem.Icon>
-                    <FontIcon Glyph="&#xE916;"/>
-                </NavigationViewItem.Icon>
-            </NavigationViewItem>
-
-
-            <NavigationViewItem Content="Function Calculator" Tag="function">
-                <NavigationViewItem.Icon>
-                    <FontIcon Glyph="f(x)"></FontIcon>
-                </NavigationViewItem.Icon>
-            </NavigationViewItem>
-            <NavigationViewItem Content="Polar/Rectangular" Tag="polar">
-                <NavigationViewItem.Icon>
-                    <FontIcon Glyph="&#xE7E3;"/>
-                </NavigationViewItem.Icon>
-            </NavigationViewItem>
-            <NavigationViewItem Content="BinaryHexOctal" Tag="binary">
-                <NavigationViewItem.Icon>
-                    <FontIcon Glyph="10"/>
-                </NavigationViewItem.Icon>
-            </NavigationViewItem>
-
-        </NavigationView.MenuItems>
-
-        <!---<Grid Background="black" Opacity=".7" Canvas.ZIndex="-1"></Grid> -->
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="555 Timer" Tag="555" >
+                    <NavigationViewItem.Icon>
+                        <FontIcon Glyph="&#xE916;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
 
 
+                <NavigationViewItem Content="Function Calculator" Tag="function">
+                    <NavigationViewItem.Icon>
+                        <FontIcon Glyph="f(x)"></FontIcon>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItem Content="Polar/Rectangular" Tag="polar">
+                    <NavigationViewItem.Icon>
+                        <FontIcon Glyph="&#xE7E3;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItem Content="BinaryHexOctal" Tag="binary">
+                    <NavigationViewItem.Icon>
+                        <FontIcon Glyph="10"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+
+            </NavigationView.MenuItems>
+
+            <!---<Grid Background="black" Opacity=".7" Canvas.ZIndex="-1"></Grid> -->
 
 
 
 
-        <Frame x:FieldModifier="public"  x:Name="selectionFrame">
-            <Frame.ContentTransitions>
-                <TransitionCollection>
-                    <NavigationThemeTransition/>
-                </TransitionCollection>
-            </Frame.ContentTransitions>
-        </Frame>
-
-        <!--<Image x:Name="backgroundImage" Source="Assets/Backgrounds/art5.jpg" Grid.Row="1"  Stretch="UniformToFill" HorizontalAlignment="Center" Canvas.ZIndex="-1"/> -->
 
 
-    </NavigationView>
+            <Frame x:FieldModifier="public"  x:Name="selectionFrame">
+                <Frame.ContentTransitions>
+                    <TransitionCollection>
+                        <NavigationThemeTransition/>
+                    </TransitionCollection>
+                </Frame.ContentTransitions>
+            </Frame>
+
+            <!--<Image x:Name="backgroundImage" Source="Assets/Backgrounds/art5.jpg" Grid.Row="1"  Stretch="UniformToFill" HorizontalAlignment="Center" Canvas.ZIndex="-1"/> -->
+
+
+        </NavigationView>
+
+        <Grid Grid.Row="1" Background="Yellow">
+            <TextBlock HorizontalAlignment="Center" Text="Alpha" FontSize="20"></TextBlock>
+        </Grid>
+
+    </Grid>
+    
 
 
 
